# epi-meta-extractor

./: .dockerignore  .gitignore  DEPLOY.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: custom.md
.github/PULL_REQUEST_TEMPLATE/: custom.md
.github/workflows/: deploy.yml
backend/: app.py  config.py  main.py
backend/db/: mongodb.py  vector_store.py
backend/ingestion/: pdf_parser.py  unified_pdf_parser.py
backend/models/: effect_schemas.py  extraction_output.py  schemas.py
backend/schemas/: __init__.py  core_schema.json  hr_schema.json  loader.py  md_smd_schema.json  or_rr_schema.json  proportion_schema.json
backend/services/: auth.py  batch.py  csv_export.py  embeddings.py  extraction.py  grobid_client.py  marker_client.py  prompt.py  structured_output.py  validation.py
backend/services/agents/: __init__.py  base_agent.py  hr_agent.py  md_smd_agent.py  or_rr_agent.py  proportion_agent.py
backend/services/prompts/: __init__.py  analysis_prompt.py  base_prompt.py  hr_prompt.py  md_smd_prompt.py  metadata_prompt.py  (+3 more)
backend/tests/: test_effect_schemas.py  test_prompts.py
frontend/: Dockerfile.prod  next.config.render.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nginx/: nginx.conf
scripts/: deploy.sh  setup-ssl.sh
tests/api/: test_api.py
tests/ingestion/: test_pdf_parser.py
tests/schemas/: test_schema_loader.py
(+33 files in other folders)
