[project]
name = "epi-meta-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "reportlab>=4.4.9",
    "uvicorn>=0.40.0",
]
