[project]
name = "epi-meta-extractor"
version = "0.1.0"
description = "Schema-driven PDF extraction for epidemiology and meta-analysis workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "httpx<0.28",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.9",
    "langchain-text-splitters>=0.3.2",
    "motor>=3.3.2",
    "openai>=1.54.0",
    "pydantic-settings>=2.5.2",
    "pymongo>=4.6.0",
    "pypdf>=4.0.1",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.9.2",
    "uvicorn>=0.24.0",
    "marker-pdf>=1.6.1",
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "reportlab>=4.0.9",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
